# gatrig

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: rust-build.yml
src/: main.rs
