[package]
name = "gatrig"
version = "0.1.2"
authors = ["Josh Finnie <josh@jfin.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.hyper]
default-features = false
features = ["tcp"]
version = "0.13"

[dependencies.tokio]
version = "0.2"

[dependencies.tokio-tls]
version = "0.3"

[dev-dependencies.tokio]
features = ["io-std", "macros"]
version = "0.2"

[dependencies]
dotenv = "0.15.0"
hyper-tls = "0.4.1"
serde_json = "1.0.53"
structopt = "0.3.13"
